# wasmarking

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  server.py
benches/: ark_withdraw.rs  hash.rs  jf_withdraw.rs  key_generation.rs  prover.rs  withdraw.rs
src/: bin.rs  js_api.rs  lib.rs  relation.rs
tests/: key_generation.rs  prover.rs
web_bench/: Cargo.toml  README.md  index.html  index.js  package.json  wasm-worker.js
web_bench/src/: lib.rs
