[package]
name = "wasmarking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-bigint = { version = "0.4", default-features = false }
ark-ff = { version = "^0.4.0" }

jf-utils = { path = "../../espresso/jellyfish/utilities", features = ["parallel"] }
jf-primitives = { path = "../../espresso/jellyfish/primitives", features = ["parallel"] }

jf-relations = { path = "../aleph-node/relations/jf", package = "liminal-jf-relations", default-features = false, features = ["test-srs"]}

getrandom = { version = "0.2", features = ["js"] }

wasm-bindgen = "0.2.83"
rayon = "1.7"
wasm-bindgen-rayon = "1.0"
web-sys = { version = "0.3" , features = ['console'] }
